# ec4j

./: .classpath  .gitignore  .gitmodules  .project  .sdkmanrc  .travis.yml  CMakeLists.txt  LICENSE  README.adoc  README.md  appveyor.yml  build.properties  plugin.properties  pom.xml
.github/: renovate.json
.github/workflows/: maven.yml  verify.yaml
core/: .gitignore  CMakeLists.txt  build.properties  plugin.properties  pom.xml
core-build/: pom.xml
core-build/src/main/resources/: eclipse-format.xml  eclipse.importorder
core/src/main/java9/: module-info.java
core/src/test/resources/bom/: utf-8-bom-bad.txt
core/src/test/resources/filetree/: .editorconfig
core/src/test/resources/filetree/parent_directory/: .editorconfig
core/src/test/resources/location-aware/: .editorconfig
core/src/test/resources/parser/: .editorconfig
core/src/test/resources/path_separator/: .editorconfig
core/src/test/resources/unset/: .editorconfig
core/src/test/resources/unset/dir/: .editorconfig
ide-support/: plugin.properties  pom.xml
ide-support/src/main/java9/: module-info.java
org.eclipse.ec4j/: .classpath  .project  plugin.properties  pom.xml
services/: plugin.properties  pom.xml
src/main/java/org/eclipse/ec4j/: AbstractEditorConfigManager.java  ContentProvider.java  EditorConfigConstants.java  EditorConfigException.java  EditorConfigManager.java  EditorConfigService.java  ResourceProvider.java  VersionException.java
src/test/java/org/eclipse/ec4j/: EditorConfigFileTreeTest.java  EditorConfigGlobTest.java  EditorConfigParserTest.java  EditorConfigTest.java  (+7 more)
(+293 files in other folders)
